[package]
name = "bone_shell"
version = "1.1.0"
authors = ["Jan Schöppach"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bone_api"
path = "src/lib.rs"

[[bin]]
name = "bone_shell"
path = "src/main.rs"

[dependencies]
json = "0.12.4"
sha2 = "0.10.2"
structopt = "0.3"
atty = "0.2"
rmpv = { version = "1.0", features = ["with-serde"] }
rmp-serde = "1.1"
serde_json = "1.0"
crossterm = "0.23.0"
statistical = "1.0"
textplots = "0.8"
rpassword = "6.0"
rustyline = "9.1.2"
dirs = "4.0"
