[package]
name = "bone_shell"
version = "1.1.3"
authors = ["Jan Schöppach"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bone_api"
path = "src/lib.rs"

[[bin]]
name = "bone_shell"
path = "src/main.rs"

[dependencies]
json = "0.12.4"
structopt = "0.3"
atty = "0.2"
rmpv = { version = "1.0", features = ["with-serde"] }
rmp-serde = "1.1"
serde_json = "1.0"
crossterm = "0.25"
statistical = "1.0"
textplots = "0.8"
rpassword = "7.3"
rustyline = "10.0"
dirs = "5.0"
network-interface = "0.1.5"
openssl = "0.10"
openssl-sys = "0.9"
hex = "0.4.3"
